@@ -247,10 +247,11 @@ cdef int io_multi_mask(GDALDatasetH hds, int mode, double x0, double y0,
 
     return exc_wrap_int(retval)
 
-def _delete_dataset_if_exists(path):
 
-    """Delete a dataset if it already exists.  This operates at a lower
-    level than a:
+cdef _delete_dataset_if_exists(path):
+    """Delete a dataset if it already exists.
+
+    This operates at a lower level than a:
 
         if rasterio.shutil.exists(path):
             rasterio.shutil.delete(path)
@@ -261,35 +262,36 @@ def _delete_dataset_if_exists(path):
     ----------
     path : str
         Dataset path.
-    """
 
-    cdef GDALDatasetH h_dataset = NULL
-    cdef GDALDriverH h_driver = NULL
+    Returns
+    -------
+    None
+
+    """
+    cdef GDALDatasetH dataset = NULL
+    cdef GDALDriverH driver = NULL
     cdef const char *path_c = NULL
 
     try:
-        h_dataset = open_dataset(path, 0x40, None, None, None)
-
+        dataset = open_dataset(path, 0x40, None, None, None)
     except (CPLE_OpenFailedError, CPLE_AWSObjectNotFoundError, CPLE_HttpResponseError) as exc:
-        log.debug(
-            "Skipped delete for overwrite. Dataset does not exist: %r", path)
-
+        log.debug("Skipped delete for overwrite, dataset does not exist: %r", path)
     else:
-        h_driver = GDALGetDatasetDriver(h_dataset)
-        GDALClose(h_dataset)
-        h_dataset = NULL
+        driver = GDALGetDatasetDriver(dataset)
+        GDALClose(dataset)
+        dataset = NULL
 
-        if h_driver != NULL:
+        if driver != NULL:
             path_b = path.encode("utf-8")
             path_c = path_b
+
             with nogil:
-                err = GDALDeleteDataset(h_driver, path_c)
+                 err = GDALDeleteDataset(driver, path_c)
+
             exc_wrap_int(err)
-
-
     finally:
-        if h_dataset != NULL:
-            GDALClose(h_dataset)
+        if dataset != NULL:
+            GDALClose(dataset)
 
 
 cdef bint in_dtype_range(value, dtype):
@@ -371,7 +373,6 @@ cdef char **convert_options(kwargs):
         options = CSLSetNameValue(options, key_c, val_c)
 
     return options
-
 
 
 cdef class DatasetReaderBase(DatasetBase):
@@ -1331,19 +1332,22 @@ cdef class DatasetWriterBase(DatasetReaderBase):
                 raise RasterBlockError("The height and width of dataset blocks must be multiples of 16")
             kwargs["tiled"] = "TRUE"
 
-        options = convert_options(kwargs)
-
         if mode in ('w', 'w+'):
 
-            _delete_dataset_if_exists(path)
+            options = convert_options(kwargs)
+
+            if CPLFetchBool(options, "APPEND_SUBDATASET", 0):
+                log.debug("No deletion, subdataset will be added: path=%r", path)
+            else:
+                _delete_dataset_if_exists(path)
 
             driver_b = driver.encode('utf-8')
             drv_name = driver_b
             try:
                 drv = exc_wrap_pointer(GDALGetDriverByName(drv_name))
-
             except Exception as err:
                 raise DriverRegistrationError(str(err))
+
 
             # Find the equivalent GDAL data type or raise an exception
             # We've mapped numpy scalar types to GDAL types so see
