@@ -35,3 +35,32 @@ def test_read_w_mode_warning(tmpdir):
 
         with pytest.raises(UnsupportedOperation):
             assert (dst.read() == 255).all()
+
+
+with rasterio.Env() as env:
+    HAVE_GPKG = "GPKG" in env.drivers().keys()
+
+import os
+
+
+@pytest.mark.skipif(not HAVE_GPKG, reason="GDAL not compiled with GPKG driver.")
+@pytest.mark.parametrize("tiffs", [["RGB.byte.tif", "RGB.byte.tif"]])
+def test_write_multilayer_geopackage(tmp_path, data_dir, tiffs):
+    """ Validate if you can create multilayer."""
+    gpkg = tmp_path.joinpath("test.gpkg")
+    tables = ["{}({})".format(tiff, idx) for idx, tiff in enumerate(tiffs, 1)]
+
+    for tiff, table in zip(tiffs, tables):
+
+        with rasterio.open(os.path.join(data_dir, tiff)) as src:
+            profile = src.meta
+            profile["driver"] = "GPKG"
+            profile["RASTER_TABLE"] = table
+            profile["APPEND_SUBDATASET"] = True
+            profile["TILE_FORMAT"] = "TIFF"
+
+            with rasterio.open(gpkg, "w", **profile) as dst:
+                dst.write(src.read())
+
+    with rasterio.open(gpkg) as dst:
+        assert len(dst.subdatasets) == 2
