@@ -4,6 +4,8 @@ Changes
 1.3.0 (TBD)
 -----------
 
+- Allow addition of subdatasets to GPKG rasters opened in "w" mode with the
+  APPEND_SUBDATASET creation option (#2300).
 - Add support for enum and tuple type creation options (#2102)
 - WarpedVRT: Remove deprecated dst_* parameters (#2197).
 - Building from source now requires Cython (#2016).
